main part second finished

--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy New Year</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Open+Sans:wght@400;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700;900&family=Open+Sans:wght@400;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-
+      <div class="banner-image">
+        <div class="banner-info">
+          <h4 class="banner-title">Happy New Year</h4>
+          <h1 class="banner-post">New Year Party Celebration</h1>
+        </div>
+      </div>
     </header>
     <main>
-
+      <section>
+        <div class="main-first-part">
+          <h1 class="main-first-part-title">65% OFF</h1>
+          <h4 class="main-first-part-post">OUR HOLIDAY DEALS ARE BETTER</h4>
+          <h3 class="main-first-part-categories">ALL CATEGORIES</h3>
+          <img src="images/New Year Photo.png" alt="" class="" />
+        </div>
+      </section>
+      <section>
+        <div class="main-part-second">
+            <div class="main-part-second-text">
+                <h1 class="main-part-second-title">Welcome to midnight party</h1>
+                <p class="main-part-second-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="main-part-second-button">JOIN NOW</button>
+            </div>
+            <div class="main-part-second-image">
+                <img src="images/Group 70.png" alt="">
+            </div>
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
