added main part third

--- a/index.html
+++ b/index.html
@@ -48,6 +48,33 @@
             </div>
         </div>
       </section>
+      <section>
+        <div class="main-part-third">
+            <div class="main-part-third-box">
+                <h3 class="main-part-third-description">Place:<span class="time-date-place"> New Park Hotel</span></h3>
+                <h3 class="main-part-third-description">Date:<span class="time-date-place"> 31 December Night 2023</span></h3>
+                <h3 class="main-part-third-description">Time:<span class="time-date-place"> Evening 7.30 pm to 12.30 am</span></h3>
+                <button class="main-part-third-button">JOIN NOW</button>
+            </div>
+        </div>
+      </section>
+      <section>
+        <div class="main-part-fourth">
+            <div class="main-part-fourth-subpart-one">
+                <h4 class="main-part-fourth-subpart-one-title">NEW BEST OFFER</h4>
+                <h3 class="main-part-fourth-subpart-one-post">Coming Soon</h3>
+                <p class="main-part-fourth-subpart-one-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            </div>
+            <div class="main-part-fourth-subpart-one">
+                <img class="main-part-fourth-image" src="images/Ellipse 1.png" alt="">
+            </div>
+            <div class="main-part-fourth-subpart-three">
+                <h3 class="main-part-fourth-subpart-three-title">2024</h3>
+                <p class="main-part-fourth-subpart-three-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="" class="main-part-fourth-subpart-three-image">
+            </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
