main part fifth section completed

--- a/index.html
+++ b/index.html
@@ -38,41 +38,96 @@
       </section>
       <section>
         <div class="main-part-second">
-            <div class="main-part-second-text">
-                <h1 class="main-part-second-title">Welcome to midnight party</h1>
-                <p class="main-part-second-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <button class="main-part-second-button">JOIN NOW</button>
-            </div>
-            <div class="main-part-second-image">
-                <img src="images/Group 70.png" alt="">
-            </div>
+          <div class="main-part-second-text">
+            <h1 class="main-part-second-title">Welcome to midnight party</h1>
+            <p class="main-part-second-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+            <button class="main-part-second-button">JOIN NOW</button>
+          </div>
+          <div class="main-part-second-image">
+            <img src="images/Group 70.png" alt="" />
+          </div>
         </div>
       </section>
       <section>
         <div class="main-part-third">
-            <div class="main-part-third-box">
-                <h3 class="main-part-third-description">Place:<span class="time-date-place"> New Park Hotel</span></h3>
-                <h3 class="main-part-third-description">Date:<span class="time-date-place"> 31 December Night 2023</span></h3>
-                <h3 class="main-part-third-description">Time:<span class="time-date-place"> Evening 7.30 pm to 12.30 am</span></h3>
-                <button class="main-part-third-button">JOIN NOW</button>
-            </div>
+          <div class="main-part-third-box">
+            <h3 class="main-part-third-description">
+              Place:<span class="time-date-place"> New Park Hotel</span>
+            </h3>
+            <h3 class="main-part-third-description">
+              Date:<span class="time-date-place"> 31 December Night 2023</span>
+            </h3>
+            <h3 class="main-part-third-description">
+              Time:<span class="time-date-place">
+                Evening 7.30 pm to 12.30 am</span
+              >
+            </h3>
+            <button class="main-part-third-button">JOIN NOW</button>
+          </div>
         </div>
       </section>
       <section>
         <div class="main-part-fourth">
-            <div class="main-part-fourth-subpart-one">
-                <h4 class="main-part-fourth-subpart-one-title">NEW BEST OFFER</h4>
-                <h3 class="main-part-fourth-subpart-one-post">Coming Soon</h3>
-                <p class="main-part-fourth-subpart-one-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+          <div class="main-part-fourth-subpart-one">
+            <h4 class="main-part-fourth-subpart-one-title">NEW BEST OFFER</h4>
+            <h3 class="main-part-fourth-subpart-one-post">Coming Soon</h3>
+            <p class="main-part-fourth-subpart-one-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <div class="main-part-fourth-subpart-one">
+            <img
+              class="main-part-fourth-image"
+              src="images/Ellipse 1.png"
+              alt=""
+            />
+          </div>
+          <div class="main-part-fourth-subpart-three">
+            <h3 class="main-part-fourth-subpart-three-title">2024</h3>
+            <p class="main-part-fourth-subpart-three-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed.
+            </p>
+            <img
+              src="images/Group 96.png"
+              alt=""
+              class="main-part-fourth-subpart-three-image"
+            />
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="main-part-fifth">
+          <div class="main-part-fifth-text">
+            <h5 class="main-part-fifth-title">WHAT IS FUNCTIONAL</h5>
+            <h2 class="main-part-fifth-post">
+              Holidays <span class="about-offer"> Sale 50%</span>
+            </h2>
+            <p class="main-part-fifth-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod. Eleifend nunc purus quam id fermentum amet amet sit
+              consectetur.
+            </p>
+          </div>
+          <div class="main-part-fifth-image-parent">
+            <img src="images/Rectangle 2.png" alt="">
+            <div class="main-part-fifth-image-child-one">
+              <img src="images/Group 75.png" alt="">
             </div>
-            <div class="main-part-fourth-subpart-one">
-                <img class="main-part-fourth-image" src="images/Ellipse 1.png" alt="">
+            <div class="main-part-fifth-child-two">
+              <img src="images/Rectangle 1.png" alt="">
             </div>
-            <div class="main-part-fourth-subpart-three">
-                <h3 class="main-part-fourth-subpart-three-title">2024</h3>
-                <p class="main-part-fourth-subpart-three-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                <img src="images/Group 96.png" alt="" class="main-part-fourth-subpart-three-image">
+            <div class="main-part-fifth-child-three">
+              <img src="images/Group 44.png" alt="">
             </div>
+          </div>
         </div>
       </section>
     </main>
