sixth part & image hover part done

--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="main-part-sixth">
+          <h5 class="main-part-sixth-title">THE BEST GIFTS</h5>
+          <h3 class="main-part-sixth-post">Our Awesome Portfolio</h3>
+          <p class="main-part-sixth-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+          <div class="main-part-sixth-image">
+            <img src="images/Rectangle 3.png" alt="">
+            <img src="images/Rectangle 4.png" alt="">
+            <img src="images/Rectangle 5.png" alt="">
+            <img src="images/Rectangle 6.png" alt="">
+            <img src="images/Rectangle 7.png" alt="">
+            <img src="images/Rectangle 8.png" alt="">
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
