done main section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="subscribe-part">
+          <div class="subscribe-part-description">
+            <img src="images/Group 61.png" alt="">
+            <h1>Subscribe Newsletter</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+          </div>
+          <div class="subscribe-button">
+            <input type="email" placeholder="username@gmail.com" name="" id="">
+            <button class="first-btn">Subscribe</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
