all done without lorem

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700;900&family=Open+Sans:wght@400;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/7855936223.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -159,6 +163,33 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-first">
+        <div class="first-half">
+          <h5 class="first-half-title">44, Big Building Roosevelt Street
+            Beach Gardens Florida 33410</h5>
+        </div>
+        <div class="second-half">
+          <h5 class="phone"><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</h5>
+          <h5 class="website"><i class="fa-solid fa-globe"></i> www.website.com</h5>
+        </div>
+      </div>
+      <hr class="first-hr">
+      <div class="footer-images">
+        <a href=""><img src="images/Facebook.png" alt=""></a>
+        <a href=""><img src="images/Instagram.png" alt=""></a>
+        <a href=""><img src="images/Twitter.png" alt=""></a>
+        <a href=""><img src="images/Linkedin.png" alt=""></a>
+      </div>
+      <hr class="first-hr">
+      <div class="footer-last">
+        <div class="last-first-half">
+          <h5>2017, All Rights Reserved.</h5>
+        </div>
+        <div class="last-last-half">
+          <a href="">Unsubscribe</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
