--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <div class="main-part-second-text">
             <h1 class="main-part-second-title">Welcome to midnight party</h1>
             <p class="main-part-second-description">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              Celebrate under the starry sky at our midnight party. Immerse in an enchanting atmosphere, where music, laughter, and joy blend for an unforgettable night of festivities.
             </p>
             <button class="main-part-second-button">JOIN NOW</button>
           </div>
@@ -80,9 +78,7 @@
             <h4 class="main-part-fourth-subpart-one-title">NEW BEST OFFER</h4>
             <h3 class="main-part-fourth-subpart-one-post">Coming Soon</h3>
             <p class="main-part-fourth-subpart-one-description">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              Exciting offer arriving! Unveil unbeatable deals with our upcoming promotion. Don't miss out on the new best offer – stay tuned for savings!
             </p>
           </div>
           <div class="main-part-fourth-subpart-one">
@@ -95,8 +91,7 @@
           <div class="main-part-fourth-subpart-three">
             <h3 class="main-part-fourth-subpart-three-title">2024</h3>
             <p class="main-part-fourth-subpart-three-description">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed.
+              Maecenas sed, offering a serene and stylish experience.
             </p>
             <img
               src="images/Group 96.png"
@@ -114,10 +109,7 @@
               Holidays <span class="about-offer"> Sale 50%</span>
             </h2>
             <p class="main-part-fifth-description">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod. Eleifend nunc purus quam id fermentum amet amet sit
-              consectetur.
+              Embrace the holiday spirit with our incredible 50% off sale. From gifts to personal treats, indulge in festive delights without breaking the bank. Unwrap joy and savings today!
             </p>
           </div>
           <div class="main-part-fifth-image-parent">
@@ -138,7 +130,7 @@
         <div class="main-part-sixth">
           <h5 class="main-part-sixth-title">THE BEST GIFTS</h5>
           <h3 class="main-part-sixth-post">Our Awesome Portfolio</h3>
-          <p class="main-part-sixth-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+          <p class="main-part-sixth-description">Explore our exceptional portfolio, a testament to innovation and excellence. Dive into a world of creativity, where each project reflects our commitment to quality and distinction.</p>
           <div class="main-part-sixth-image">
             <img src="images/Rectangle 3.png" alt="">
             <img src="images/Rectangle 4.png" alt="">
@@ -154,7 +146,7 @@
           <div class="subscribe-part-description">
             <img src="images/Group 61.png" alt="">
             <h1>Subscribe Newsletter</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p>Stay informed and inspired! Subscribe to our newsletter for the latest updates, exclusive offers, and exciting content delivered right to your inbox. Join us on the journey! </p>
           </div>
           <div class="subscribe-button">
             <input type="email" placeholder="username@gmail.com" name="" id="">
