--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="main-part-second-description">
               Celebrate under the starry sky at our midnight party. Immerse in an enchanting atmosphere, where music, laughter, and joy blend for an unforgettable night of festivities.
             </p>
-            <button class="main-part-second-button">JOIN NOW</button>
+            <a href=""><button class="main-part-second-button">JOIN NOW</button></a>
           </div>
           <div class="main-part-second-image">
             <img src="images/Group 70.png" alt="" />
@@ -68,7 +68,7 @@
                 Evening 7.30 pm to 12.30 am</span
               >
             </h3>
-            <button class="main-part-third-button">JOIN NOW</button>
+            <a href=""><button class="main-part-third-button">JOIN NOW</button></a>
           </div>
         </div>
       </section>
@@ -150,7 +150,7 @@
           </div>
           <div class="subscribe-button">
             <input type="email" placeholder="username@gmail.com" name="" id="">
-            <button class="first-btn">Subscribe</button>
+            <a href=""><button class="first-btn">Subscribe</button></a>
           </div>
         </div>
       </section>
