allignment problem fixed

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
     <main>
       <section>
         <div class="main-first-part">
-          <h1 class="main-first-part-title">65% OFF</h1>
+          <div class="main-first-part-text">
+            <h1 class="main-first-part-title">65% OFF</h1>
           <h4 class="main-first-part-post">OUR HOLIDAY DEALS ARE BETTER</h4>
           <h3 class="main-first-part-categories">ALL CATEGORIES</h3>
           <img src="images/New Year Photo.png" alt="" class="" />
+          </div>
         </div>
       </section>
       <section>
