--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href=""><button class="main-part-second-button">JOIN NOW</button></a>
           </div>
           <div class="main-part-second-image">
-            <img src="images/Group 70.png" alt="" />
+            <img src="images/Group_70-removebg-preview.png" alt="" />
           </div>
         </div>
       </section>
@@ -117,7 +117,7 @@
           <div class="main-part-fifth-image-parent">
             <img src="images/Rectangle 2.png" alt="">
             <div class="main-part-fifth-image-child-one">
-              <img src="images/Group 75.png" alt="">
+              <img src="images/Group_75-removebg-preview.png" alt="">
             </div>
             <div class="main-part-fifth-child-two">
               <img src="images/Rectangle 1.png" alt="">
